spytank update